[gd_scene load_steps=21 format=3 uid="uid://d1v2f6vunujwc"]

[ext_resource type="Script" uid="uid://blxcihr8ws807" path="res://src/Enemy/enemy.gd" id="1_e1ltt"]
[ext_resource type="Texture2D" uid="uid://c5glh37p4cocm" path="res://src/enemySprites/knightfin2.png" id="1_hb8ge"]
[ext_resource type="Texture2D" uid="uid://ducx1rktpkhtn" path="res://src/enemySprites/knightfin3.png" id="2_e1ltt"]
[ext_resource type="Texture2D" uid="uid://csgktqpsbfb2o" path="res://src/enemySprites/knightfin4.png" id="3_dxifv"]
[ext_resource type="Texture2D" uid="uid://cahk886qxv3yl" path="res://src/enemySprites/knightfin5.png" id="4_pwjut"]
[ext_resource type="Texture2D" uid="uid://cl14svk0riek8" path="res://src/enemySprites/knightfin6.png" id="5_n0g06"]
[ext_resource type="Texture2D" uid="uid://ch02t5qouppjn" path="res://src/enemySprites/knightfin7.png" id="6_ar8e5"]
[ext_resource type="Texture2D" uid="uid://bo1hnlhs8u4r8" path="res://src/enemySprites/knightfin8.png" id="7_doop2"]
[ext_resource type="Texture2D" uid="uid://c04qokka10onb" path="res://src/enemySprites/knightfin9.png" id="8_5hcft"]
[ext_resource type="Texture2D" uid="uid://b6wdkd6omotsf" path="res://src/enemySprites/knightfin_walk1.png" id="10_ar8e5"]
[ext_resource type="Texture2D" uid="uid://cfu42wlw23rvy" path="res://src/enemySprites/knightfin_walk2.png" id="11_doop2"]
[ext_resource type="Texture2D" uid="uid://c4veaxysl5486" path="res://src/enemySprites/knightfin_walk3.png" id="12_5hcft"]
[ext_resource type="Texture2D" uid="uid://dcunc0flxtkp4" path="res://src/enemySprites/knightfin_walk4.png" id="13_nnovl"]
[ext_resource type="Script" uid="uid://b6utarwb21mpe" path="res://src/Classes/Hitbox.gd" id="14_nn272"]
[ext_resource type="Script" uid="uid://bx30siccecw4q" path="res://src/Resource/AttackStats/AttackStats.gd" id="15_yfud7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nnovl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hb8ge")
}, {
"duration": 1.0,
"texture": ExtResource("2_e1ltt")
}, {
"duration": 1.0,
"texture": ExtResource("3_dxifv")
}, {
"duration": 1.0,
"texture": ExtResource("4_pwjut")
}, {
"duration": 1.0,
"texture": ExtResource("5_n0g06")
}, {
"duration": 1.0,
"texture": ExtResource("6_ar8e5")
}, {
"duration": 1.0,
"texture": ExtResource("7_doop2")
}, {
"duration": 1.0,
"texture": ExtResource("8_5hcft")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ar8e5")
}, {
"duration": 1.0,
"texture": ExtResource("11_doop2")
}, {
"duration": 1.0,
"texture": ExtResource("12_5hcft")
}, {
"duration": 1.0,
"texture": ExtResource("13_nnovl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ar8e5"]
size = Vector2(20, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_ar8e5"]
radius = 105.00476

[sub_resource type="Resource" id="Resource_7una0"]
script = ExtResource("15_yfud7")

[sub_resource type="CircleShape2D" id="CircleShape2D_doop2"]
radius = 36.013885

[node name="Enemy" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(100, 100)
script = ExtResource("1_e1ltt")

[node name="enemSprite" type="AnimatedSprite2D" parent="Area2D"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nnovl")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ar8e5")

[node name="Detection" type="Area2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Detection"]
shape = SubResource("CircleShape2D_ar8e5")

[node name="Attack" type="Area2D" parent="Area2D"]
script = ExtResource("14_nn272")
stats = SubResource("Resource_7una0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Attack"]
shape = SubResource("CircleShape2D_doop2")

[node name="AggroTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D/Detection" to="Area2D" method="_on_detection_area_entered"]
[connection signal="area_exited" from="Area2D/Detection" to="Area2D" method="_on_detection_area_exited"]
[connection signal="area_entered" from="Area2D/Attack" to="Area2D" method="_on_attack_area_entered"]
[connection signal="area_exited" from="Area2D/Attack" to="Area2D" method="_on_exit_attack_range"]
[connection signal="timeout" from="AggroTimer" to="Area2D" method="_on_aggro_timer_timeout"]
